<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/quiz_activity"
    tools:context="com.example.huialy.geoquiz.QuizActivity">

    <TextView
        android:id="@+id/question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_button"
            android:onClick="showResult"
            />
        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button"
            android:onClick="showResult"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/prev"
            android:src="@drawable/arrow_left"
            android:onClick="prevQuestion"
            />
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/next"
            android:src="@drawable/arrow_right"
            android:onClick="nextQuestion"
            />

    </LinearLayout>

    <Button
        android:id="@+id/cheat_button"
        android:text="@string/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startCheatActivity"
        />

</LinearLayout>
